Fixing layout issue on the highlights cards

--- a/assets/style/elements.scss
+++ b/assets/style/elements.scss
@@ -189,6 +189,7 @@ button {
         background-color: var(--bg-week-card);
         padding: 15px;
         min-height: 172px;
+        overflow: hidden;
         h6 {
             font-size: 15px;
             margin-bottom: 20px;
